--- a/src/main/resources/templates/fragments/capacitador/capacitadoresreport.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadoresreport.html
@@ -10,12 +10,12 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE BENEFICIOS</h3>
+            <h3>GENERACION DE REPORTE DE CAPACITADOR</h3>
             <div>
-                <form class="form-horizontal" id="formbeneficio">
+                <form class="form-horizontal" id="formcapacitador">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                        <label class="col-sm-3 control-label" >Codigo Capacitador:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
@@ -51,8 +51,8 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
-            $("form#formbeneficio").submit();
+            $("#formcapacitador").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("form#formcapacitador").submit();
             
         });
     });
