--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -15,22 +15,71 @@
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo:</label>
+                    <label class="col-sm-2 control-label">Codigo Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
+                        <p class="form-control-static" th:text="${capacitador.codigocapacitador}">Usuario Id</p></div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nombre:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.nombrebeneficio}">Nombre</p>
+                        <p class="form-control-static" th:text="${capacitador.nombrecapacitador}">Nombre</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">descripcion:</label>
+                    <label class="col-sm-2 control-label">Tema de dominio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.descripcionbeneficio}">descripcion</p>
+                        <p class="form-control-static" th:text="${capacitador.temadominio}">Tema de dominio</p>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Tipo Capacitador:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Dui:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.duicapacitador}">Dui</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Nit:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.nitcapacitador}">Nit</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Carnet de Residencia:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Telefono Fijo:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Telefono Movil:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
+                    </div>
+                </div>
+                
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Correo Electronico:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
+                    </div>
+                </div>
+<!--                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Codigo Empleado</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>
+                    </div>
+                </div>-->
                 
             </form>
     </div>
