--- a/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
@@ -12,7 +12,7 @@
         <div class="col-md-8">
             <h3>GENERACION DE REPORTE DE COMITES</h3>
             <div>
-                <form class="form-horizontal" id="formbeneficio">
+                <form class="form-horizontal" id="formcomite">
 
                     <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo de comite:</label>
