--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -1,89 +1,147 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  
-<head lang="en">
 
-    <title>Nuevo Comite</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+    <head lang="en">
+
+        <title>Nueva Capacitacion</title>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
-    <div>
-        <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
-          <input type="hidden" th:field="*{codigocomite}"/>
-            <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de comite:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrecomite}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Responsable:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{responsablecomite}"/>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{desripcioncomite}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Numero de acuerdo:</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{numeroacuerdocomite}"/>
-                </div>
-            </div>
-            
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Miembros maximos:</label>
-                <div class="col-sm-10">
-                    <input type=number class="form-control" th:field="*{miembromaximo}"/>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Desde:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdecomite}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Hasta:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastacomite}"/>
-                </div>
-            </div>
-        <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo empleado:</label>
-                                     <div class="col-sm-10">
-               <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                          </div>
-                                </div>
-            
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
-        </form>
-    </div>
-</div>
-<script>
-    $(document).ready(function () {
-        $('#fechadesdecomite').datepicker({
-            dateFormat: 'yy-mm-dd'
-        });
+    <div class="container">
+        <h2>detalle de Capacitacion</h2>
+        <div>
+            <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
+               
+                <input type="hidden" th:field="*{codigocapacitacion}"/>
+    
 
-        $('#fechahastacomite').datepicker({
-            dateFormat: 'yy-mm-dd'
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Nombre de Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{nombrecapacitacion}"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Descripcion Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{descripcioncapacitacion}"/>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label">Categoria Capacitacion(*):</label>
+                <div class="col-sm-7">
+                    <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
+                    <select class="form-control" name="categoriacapacitacion" >
+                        <option>Desarrollo laboral</option>
+                        <option>Desarrollo Personal</option>
+                        <option>Desarrollo Social</option>
+                        <option>Desarrollo del pensamiento</option>
+
+                    </select>
+                </div>
+            </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Descripcion Categoria:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{descripcioncategoria}"/>
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label">Departamento Responsable(*):</label>
+                <div class="col-sm-7">
+                    <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
+                    <select class="form-control" name="departamentoresponsable" >
+                        <option>Recursos humanos</option>
+                        <option>Finanzas</option>
+                        <option>Contabilidad</option>
+
+                    </select>
+                </div>
+            </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Duracion de Capacitacion en Horas:</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" th:field="*{duracionhoracapacitacion}"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Duracion de Capacitacion en Dias:</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" th:field="*{duraciondiacapacitacion}"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Organismo Patrocianador:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{organismopatrocinador}"/>
+                    </div>
+                </div>
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Tipo Evento:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{tipoevento}"/>
+                    </div>
+                </div>
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Especialidad de Evento:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{especialidadevento}"/>
+                    </div>
+                </div>
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Pais de realizacion de Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{paiscapacitacion}"/>
+                    </div>
+                </div>
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{fechacapacitacion}"/>
+                    </div>
+                </div>
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Tipo de Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" th:field="*{tipocapacitacion}"/>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Estado de la Capacitacion:</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" th:field="*{estadocapacitacion}"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">CodigoCapacitador:</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>
+                    </div>
+                </div>
+                
+
+                <div class="row">
+                    <button type="submit" class="btn btn-default">Agregar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script>
+        $(document).ready(function () {
+            $('#fechacapacitacion').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
+
+            $('#fechahastacomite').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
         });
-    });
-</script>
+    </script>
 
 </body>	
 </html>
