--- a/src/main/resources/templates/fragments/capacitacion/show.html
+++ b/src/main/resources/templates/fragments/capacitacion/show.html
@@ -1,89 +1,117 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>SISADMRH-Detalle de comites</title>
-     <th:block th:include="../templates/header"></th:block>
- 
+        <title>SISADMRH-Detalle de comites</title>
+    <th:block th:include="../templates/header"></th:block>
 
-  
+
+
 </head>
 <body>
- <div class="row">
- <div class="col-md-3">
+    <div class="row">
+        <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-    <h3 align="center">Consulta de Datos de comite</h3>
-        <div>
-            <form class="form-horizontal">
-                 <div class="col-md-6">
-                     <div class="form-group">
-                    <label class="col-sm-5 control-label">codigo:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-5 control-label">Nombre de comite:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.nombrecomite}">Nombre de comite</p>
+            <h3 align="center">Consulta de Datos de capacitacion</h3>
+            <div>
+                <form class="form-horizontal">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">codigo de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.codigocapacitacion}"> codigo de Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.nombrecapacitacion}"> Nombre de Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Descripcion de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.descripcioncapacitacion}">Descripcion de Capacitacion </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Categorica de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.categoriacapacitacion}">Categorica de Capacitacion </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Descripcion de Categoria de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.descripcioncategoria}"> Descripcion de Categoria de Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Deparatamento Responsable de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.departamentoresponsable}"> Deparatamento Responsable de Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Duracion de Capacitacion en Horas:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.duracionhoracapacitacion}">Duracion de Capacitacion en Horas </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Duracion de Capacitacion en Dias:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.duraciondiacapacitacion}"> Duracion de Capacitacion en Dias</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Organismo Patrocinador:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.organismopatrocinador}">Organismo Patrocinador </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Tipo de Evento:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.tipoevento}">Tipo de Evento </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Especialidad del Evento:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.especialidadevento}"> </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Pais donde se Realiza la Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.paiscapacitacion}">Especialidad del Evento </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Fecha de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.fechacapacitacion}">Fecha de Capacitacion </p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Tipo de Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.tipocapacitacion}"> Tipo de Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Estado de la Capacitacion:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.estadocapacitacion}"> Estado de la Capacitacion</p></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">codigo de Capacitador:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.codigocapacitador.codigocapacitador}"> </p></div>
+                        </div>
+                    </div> 
+                </form>
+                <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-5 control-label">Sueldo Base:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.responsablecomite}">Responsable</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-5 control-label">desripcioncomite:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.desripcioncomite}">desripcioncomite</p>
-                    </div>
-                </div>
-                      <div class="form-group">
-                    <label class="col-sm-5 control-label">desripcioncomite:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.numeroacuerdocomite}">numeroacuerdocomite</p>
-                    </div>
-                </div>
-                     
-                       <div class="form-group">
-                    <label class="col-sm-5 control-label">miembromaximo:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.miembromaximo}">miembromaximo</p>
-                    </div>
-                </div>
-                     
-                       <div class="form-group">
-                    <label class="col-sm-5 control-label">fechadesdecomite:</label>
-                    <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${comite.fechadesdecomite}">fechadesdecomite</p>
-                    </div>
-                </div>
-                  
-                <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha hasta comite:</label>
-                    <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha hasta </p>
-                    </div>
-                </div>
-                  </div> 
-                
-                
-            </form>
-            <div class="col-md-12">
-            <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
-                
             </div>
-    </div>
-    </div>
-</div>
-      <div class="col-md-12">
+        </div>
+        <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-     </div>
+    </div>
 
 </body>
 </html>
