--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>Comites</title>
+    <title>Comites de Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
 <div class="container">
     e aqui
-    <div th:if="${not #lists.isEmpty(comites)}">
-        <h2>Todos losComites</h2>
+    <div th:if="${not #lists.isEmpty(costocapacitaciones)}">
+        <h2>Listado de costos de Capacitaciones</h2>
         <table class="table table-striped">
             <tr>
-                <th>Codigo</th>
-                <th>Nombre</th>
-                <th>Responsable</th>
-                <th>Descripcion</th>
-                <th>N de acuerdo</th>
-                <th>Miembros maximos</th>
-                <th>F. desde</th>
-                <th>F. hasta</th>
-                <th>descripcion</th>
+                <th>Codigo de costo de Capacitacion</th>
+                <th>Costo Persona</th>
+                <th>Numero de Personas</th>
+                <th>Costo de Capacitador</th>
+                <th>Codigo Capacitacion</th>
+                
                 <th>Acciones</th>
                 
             </tr>
-            <tr th:each="comite : ${comites}">
-                <td th:text="${comite.codigocomite}">Codigo</td>
-                <td th:text="${comite.nombrecomite}">Nombre</td>
-                <td th:text="${comite.responsablecomite}">Responsable</td>
-                <td th:text="${comite.desripcioncomite}">Descripcion</td>
-                <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
-                <td th:text="${comite.miembromaximo}">Miembro maximo</td>
-                <td th:text="${comite.fechadesdecomite}">F. desde</td>
-                <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
+            <tr th:each="costocapacitacion : ${costocapacitaciones}">
+                <td th:text="${costocapacitacion.codigocostocapacitacion}">Codigo Capacitacion</td>
+                <td th:text="${costocapacitacion.costopersona}">Costo Persona</td>
+                <td th:text="${costocapacitacion.numeropersona}">Numero de Personas</td>
+                <td th:text="${costocapacitacion.costocapacitador}">Costo de Capactador</td>
+                <td th:text="${costocapacitacion.codigocapacitacion}">Codigo Capacitacion</td>
                 
-                <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>
+                
+                <td><a th:href="${'./show/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-default">Mostrar</a>
+                <a th:href="${'./edit/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-default">Edit</a>
+                <a th:href="${'./delete/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-danger">Delete</a></td>
             </tr>
         </table>
     </div>
