--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -3,69 +3,46 @@
   
 <head lang="en">
 
-    <title>Nuevo Comite</title>
+    <title>Nuevo Costo de Capacitacion</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
     <h2>detalle comite</h2>
     <div>
-        <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
-          <input type="hidden" th:field="*{codigocomite}"/>
+        <form class="form-horizontal" th:object="${costocapacitacion}" th:action="@{../costocapacitacion}" method="post">
+          <input type="hidden" th:field="*{codigocostocapacitacion}"/>
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de comite:</label>
+                <label class="col-sm-2 control-label">Costo Por Persona:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrecomite}"/>
+                    <input type="text" class="form-control" th:field="*{costopersona}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Responsable:</label>
+                <label class="col-sm-2 control-label">Numero de Personas:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{responsablecomite}"/>
+                    <input type="number" class="form-control" th:field="*{numeropersona}"/>
                 </div>
             </div>
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion:</label>
+                <label class="col-sm-2 control-label">Costo Capacitador:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{desripcioncomite}"/>
+                    <input type="text" class="form-control" th:field="*{costocapacitador}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Numero de acuerdo:</label>
+                <label class="col-sm-2 control-label">codigo de Capacitacion:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{numeroacuerdocomite}"/>
+                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
                 </div>
             </div>
             
             
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Miembros maximos:</label>
-                <div class="col-sm-10">
-                    <input type=number class="form-control" th:field="*{miembromaximo}"/>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Desde:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdecomite}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Hasta:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastacomite}"/>
-                </div>
-            </div>
-        <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo empleado:</label>
-                                     <div class="col-sm-10">
-               <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                          </div>
-                                </div>
+           
+        
             
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
