Busqueda de capacitaciones

--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -21,98 +21,99 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">codigo:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.codigocapacitacion}">codigo de capacitacion</p></div>
+                                <p class="" th:text="${capacitacion.codigocapacitacion}">codigo de capacitacion</p>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre de capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.nombrecapacitacion}">Nombre de capacitacion</p>
+                                <p class="" th:text="${capacitacion.nombrecapacitacion}">Nombre de capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Descripcion Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.descripcioncapacitacion">Descripcion Capacitacion</p>
+                                <p class="" th:text="${capacitacion.descripcioncapacitacion}">Descripcion Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Categoria Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.categoriacapacitacion}">Categoria Capacitacion</p>
+                                <p class="" th:text="${capacitacion.categoriacapacitacion}">Categoria Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Desripcion Categoria:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capaitacion.descripcioncategoria}">Descripcion Categoria</p>
+                                <p class="" th:text="${capacitacion.descripcioncategoria}">Descripcion Categoria</p>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Departametno Responsable:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.departamentoresponsable}">Departamento Responsable</p>
+                                <p class="" th:text="${capacitacion.departamentoresponsable}">Departamento Responsable</p>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Duracion Capacitacion en Horas:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.duracionhoracapacitacion}">Duracion Capacitacion en Horas</p>
+                                <p class="" th:text="${capacitacion.duracionhoracapacitacion}">Duracion Capacitacion en Horas</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Duracion Capacitacion en Dias:</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${capacitacion.duraciondiacapacitacion}">Duracion Capacitacion en Dias </p>
+                            <label class="col-sm-5 control-label">Duracion Capacitacion en Dias:</label>
+                            <div class="col-sm-7">
+                                <p class="" th:text="${capacitacion.duraciondiacapacitacion}">Duracion Capacitacion en Dias </p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-7 control-label">Organismo Patrocinador:</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${capacitacion.organismopatrocinador}">Organismo Patrocinador</p>
+                            <label class="col-sm-5 control-label">Organismo Patrocinador:</label>
+                            <div class="col-sm-7">
+                                <p class="" th:text="${capacitacion.organismopatrocinador}">Organismo Patrocinador</p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-7 control-label">Tipo de Evento:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Tipo de Evento:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.tipoevento}">Tipo de Evento</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Especialidad del Evento:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Especialidad del Evento:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.especialidadevento}">Especialidad del evento</p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-7 control-label">Pais donde se Desarrolla la Capacitacion:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Pais donde se Desarrolla la Capacitacion:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.paiscapacitacion}">Pais donde se Desarrolla la Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Fecha de Capacitacion:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Fecha de Capacitacion:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.fechacapacitacion}">Fecha de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Tipo de Capacitacion:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Tipo de Capacitacion:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.fechacapacitacion}">Tipo de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Estado de Capacitacion:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Estado de Capacitacion:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.estadocapacitacion}">Estado de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Codigo de Capacitador:</label>
-                            <div class="col-sm-5">
+                            <label class="col-sm-5 control-label">Codigo de Capacitador:</label>
+                            <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.codigocapacitador}">Codigo de Capacitador</p>
                             </div>
                         </div>
