--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
+        <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <title>Login</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <!-- Include _menu.html -->
+    <div class="col-md-3">
+        <th:block th:include="../templates/menu"></th:block>
+    </div>
     <h1>Login</h1>
-
     <!-- /login?error=true -->
     <div th:if="${#request.getParameter('error') == 'true'}"
          style="color:red;margin:10px 0px;">
@@ -25,14 +28,14 @@
         <table>
             <tr>
                 <td>User:</td>
-                <td><input type='text' name='username' value=''></td>
+                <td><input type='text' name='username' value='' ></td>
             </tr>
             <tr>
                 <td>Password:</td>
                 <td><input type='password' name='password' /></td>
             </tr>
             <tr>
-                <td><input name="submit" type="submit" value="submit" /></td>
+                <td><input name="submit" type="submit" value="Login" /></td>
             </tr>
         </table>
     </form>
@@ -43,7 +46,9 @@
         <li>dbuser1/123</li>
         <li>dbadmin1/123</li>
     </ul>  
-
+   <div class="col-md-12">
+            <th:block th:include="footer"></th:block>
+   </div>
 </body>
 
 </html>
